--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,5 +1,8 @@
 plugins {
     id "com.android.application"
+    // START: FlutterFire Configuration
+    id 'com.google.gms.google-services'
+    // END: FlutterFire Configuration
     id "kotlin-android"
     id "dev.flutter.flutter-gradle-plugin"
 }
@@ -23,9 +26,11 @@ if (flutterVersionName == null) {
 }
 
 android {
-    namespace "com.example.jobapp"
-    compileSdkVersion flutter.compileSdkVersion
+    namespace "com.example.jobpoint"
+    compileSdkVersion 34
     ndkVersion flutter.ndkVersion
+
+
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -42,14 +47,13 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.jobapp"
+        applicationId "com.example.jobpoint"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         minSdkVersion flutter.minSdkVersion
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
-        multiDexEnabled = true
     }
 
     buildTypes {
@@ -65,6 +69,4 @@ flutter {
     source '../..'
 }
 
-dependencies {
-    implementation("androidx.multidex:multidex:2.0.1")
-}
+dependencies {}
