--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: jobapp
+name: jobpoint
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -34,23 +34,27 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.8
   firebase_core: ^2.24.2
   firebase_auth: ^4.16.0
   get: ^4.6.6
   cloud_firestore: ^4.14.0
-  flutter_svg: ^2.0.9
-  font_awesome_flutter: ^10.6.0
-  google_fonts: ^6.1.0
+  flutter_svg: ^2.0.10+1
+  font_awesome_flutter: ^10.7.0
+  google_fonts: ^6.2.0
   google_sign_in: ^6.1.6
   firebase_database: ^10.4.0
-  image_picker: ^1.0.7
+  image_picker: ^1.0.8
   firebase_storage: ^11.6.0
+  file_picker: ^8.0.0+1
+  dio: ^5.4.3+1
+  dotted_border: ^2.1.0
+  iconsax: ^0.0.8
+  url_launcher: ^6.2.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-    
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -75,8 +79,6 @@ flutter:
     - assets/images/
     - assets/logo/
     - assets/login/
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
